# ulgen

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml
apps/ulgen-app/: Cargo.toml
apps/ulgen-app/src/: app_shell.rs  main.rs
crates/ulgen-acp/: Cargo.toml
crates/ulgen-acp/src/: lib.rs
crates/ulgen-command/: Cargo.toml
crates/ulgen-command/src/: lib.rs
crates/ulgen-domain/: Cargo.toml
crates/ulgen-domain/src/: lib.rs
crates/ulgen-muxd/: Cargo.toml
crates/ulgen-muxd/src/: lib.rs  socket_api.rs
crates/ulgen-muxd/tests/: socket_control_api.rs
crates/ulgen-notify/: Cargo.toml
crates/ulgen-notify/src/: lib.rs
crates/ulgen-pty/: Cargo.toml
crates/ulgen-pty/src/: lib.rs
crates/ulgen-pty/tests/: backend_contract.rs
crates/ulgen-settings/: Cargo.toml
crates/ulgen-settings/src/: lib.rs
docs/: architecture.md  license.md  milestone-commit-journal.md  milestones.md  tracking.md
docs/rpc/: muxd.md
scripts/: coderabbit_codex_review.sh  create_github_milestones.sh  open_issue_pr.sh  start_issue_branch.sh
